--- a/resources/views/package.twig
+++ b/resources/views/package.twig
@@ -1,47 +1,107 @@
 {% extends "layouts/default.twig" %}
 {% block content %}
 <div class="container">
-    <h2>{{ site.title }} Speaker Information</h2>
+    <h2>{{ site.title }} - Speaker/Trainer Information</h2>
+    <hr>
     <p>
-        We're committed to bringing together some of the best speakers from all around the
-        world to share their knowledge with you here. We provide a travel and
+        We're committed to create an exquisite line-up of speakers and trainers for our audience. We provide a travel and
         accommodation package to all selected speakers to help make this possible.
     </p>
+
     <h3>About the event</h3>
+    <hr>
     <p>
         Speakers will be provided with a projector, a wireless lapel microphone and a screen
         for their presentation (size depends on the room). Speakers should bring any equipment
-        they need to connect to projectors (VGA). It is also suggested that you reduce your
+        they need to connect to projectors. It is also suggested that you reduce your
         dependency on the in-house internet connection as possible.
     </p>
     <p>
         When the Call for Papers closes, the organizers will sort through the submissions, making
         their selections. Speakers will be notified as soon as the selection process has been completed.
     </p>
-    <h3>This year's package</h3>
+
+    <h3>This year's packages</h3>
+    <hr>
+
+    <h4>
+        For <span class="text-brand font-bold">trainers</span> giving a full-day workshop (8h)
+    </h4>
     <p>
-        Our speaker package for this year's event includes:
+        our package includes:
     </p>
     <ul>
         <li>Full conference pass</li>
-        <li>For speakers remote to the Area:</li>
-        <ul>
-            <li>Complimentary airfare/travel</li>
-            <li>2 complimentary hotel nights</li>
-        </ul>
-        <li>Lunch, receptions and activities included in regular conference</li>
+        <li>Catering, receptions and activities included in regular conference</li>
+        <li>Speaker dinner / brunch</li>
+        <li>Airfare/Travel costs, if you are remote to the area</li>
+        <li>Accommodation (Double room, 1-3 nights)</li>
+        <li>We'll pick you up and drop you off to/from the airport so you don't have to worry about it.</li>
+        <li>
+            A payout of &euro;150.00 per workshop attendee (max. &euro;3,750.00) via bank transfer after the event<br>
+            <small class="text-muted">
+                <i class="fa fa-star"></i>
+                We’re charging &euro;239.00 per workshop ticket, we’ll keep &euro;89.00 (regular conference ticket price)
+                to cover our costs, you’ll get the rest.
+            </small>
+        </li>
+        <li>Workshop materials like post-its, whiteboard, markers, flip chart - whatever you need</li>
+    </ul>
+
+    <hr>
+
+    <h4>
+        For <span class="text-brand font-bold">trainers</span> giving a half-day workshop (4h)
+    </h4>
+    <p>
+        our package includes:
+    </p>
+    <ul>
+        <li>Full conference pass</li>
+        <li>Catering, receptions and activities included in regular conference</li>
+        <li>Speaker dinner / brunch</li>
+        <li>Airfare/Travel costs, if you are remote to the area</li>
+        <li>Accommodation (Double room, 1-3 nights)</li>
+        <li>We'll pick you up and drop you off to/from the airport so you don't have to worry about it.</li>
+        <li>
+            A payout of &euro;50.00 per workshop attendee (max. &euro;1,250.00) via bank transfer after the event<br>
+            <small class="text-muted">
+                <i class="fa fa-star"></i>
+                We’re charging &euro;139.00 per workshop ticket, we’ll keep &euro;89.00 (regular conference ticket price)
+                to cover our costs, you’ll get the rest.
+            </small>
+        </li>
+        <li>Workshop materials like post-its, whiteboard, markers, flip chart - whatever you need</li>
+    </ul>
+
+    <hr>
+
+    <h4>
+        For <span class="text-brand font-bold">speakers</span> giving a conference talk (45-60 Minutes)
+    </h4>
+    <p>
+        our package includes:
+    </p>
+    <ul>
+        <li>Full conference pass</li>
+        <li>Catering, receptions and activities included in regular conference</li>
+        <li>Speaker dinner / brunch</li>
+        <li>Airfare/Travel costs, if you are remote to the area</li>
+        <li>Accommodation (Double room, 1-3 nights)</li>
         <li>We'll pick you up and drop you off to/from the airport so you don't have to worry about it.</li>
     </ul>
+
     <p>
-        International speakers are encouraged to <a href="/">submit their ideas</a>, but because of budget restrictions,
-        we can only accept a limited number of speakers from outside the country.
+        International speakers/trainers are encouraged to <a href="/">submit their ideas</a>, but because of budget restrictions,
+        we can only accept a limited number of speakers/trainers from outside the country.
     </p>
+
     <h3>Tips for Submission</h3>
+    <hr>
     <p>
-        We <i>strongly</i> encourage potential speakers to submit more than one submission on more than one topic. The
+        We <i>strongly</i> encourage potential speakers/trainers to submit more than one submission on more than one topic. The
         more submissions you contribute, the more options you give us to pick you. Be sure your talk title and abstract
-        define the exact topic you want to talk about and what you hope people will learn from the session. In previous
-        years, some submissions sounded interesting but we just didn't have enough detail for them to make the final cut.
+        define the exact topic you want to talk about and what you hope people will learn from the session.
     </p>
 </div>
 {% endblock %}
