--- a/resources/views/layouts/default.twig
+++ b/resources/views/layouts/default.twig
@@ -9,8 +9,8 @@
         <nav class="{% if not active('homepage') %}border-b border-white{% endif %}">
             <div class="container mx-auto flex justify-between">
                 <a class="font-serif flex items-center" href="{{ url('homepage') }}">
-                    <img class="w-10 mr-2" src="{{ assets('img/logo.svg') }}" alt="OpenCFP">
-                    <h1 class="font-normal m-0">Open<span class="text-brand font-bold">CFP</span></h1>
+                    <img class="w-2/3 mt-4 mb-4" src="{{ assets('img/PHPDD18-Logo.svg') }}" alt="PHP Developer Days 2018">
+                    <h1 class="sr-only">PHP Developer Days 2018</h1>
                 </a>
                 <div class="flex">
                     <a href="{{ url('homepage') }}" class="mr-8 py-6 {% if active('homepage') %}border-b-4 border-brand{% else %}text-soft{% endif %}">Home</a>
@@ -51,7 +51,6 @@
         {% endblock %}
 
         {% if site.show_contrib_banner %}
-        {% include "_forkme.twig" %}
         {% endif %}
     </body>
 </html>
