--- a/resources/views/ideas.twig
+++ b/resources/views/ideas.twig
@@ -2,35 +2,35 @@
 {% block content %}
 <div class="container">
     <h2>Call for Papers Talk Ideas</h2>
+    <hr>
     <p>
-        {{ site.title }} is not limited to just PHP-related talks. There have been
-        sessions covering a wide range of topics supporting PHP developers and DevOps
-        as well, and we encourage you to "think outside the box" to come up with your
-        own unique topics.
+        {{ site.title }} is an event from and for the PHP community. Your talk or workshop topic should be an
+        enriching and valuable experience to the audience. That's why we encourage you to submit talk or workshop topics involving
+        or directly related to professional PHP development or anything else that affects PHP development teams or individuals.
     </p>
     <p>
-        Due to financial constraints most conferences tend to pick speakers to present
-        multiple talks. Therefore <strong>it is advisable to submit a few talk ideas, not just one.</strong>
-        By submitting a single talk you may lessen your chances of being selected.
+        We encourage you to <strong>submit a few talk/workshop ideas, not just one.</strong>
+    </p>
+    <p>
+        Please be aware that our conference only has a maximum of 4 half-day workshop slots and a single track on the
+        conference day so that the overall number of speakers is very limited. Submit your most favorite and unique ideas
+        to raise the chance of being selected.
     </p>
     <p>
         To get the ideas flowing, here's a few suggestions:
     </p>
     <ul>
-        <li>Virtualization and environments</li>
-        <li>Javascript</li>
-        <li>Alternate PHP run-times</li>
-        <li>PHP internals</li>
+        <li>Modern PHP development environments</li>
+        <li>PHP internals or extensions</li>
         <li>Development principles</li>
         <li>Security</li>
-        <li>Mobile-first design</li>
         <li>Testing (unit, functional, etc.)</li>
-        <li>Version control</li>
-        <li>User Experience/Usability</li>
-        <li>Building APIs (REST, SOAP, whatever)</li>
+        <li>Tools for workflow automation</li>
+        <li>(Inter-)Team management</li>
         <li>Continuous Integration</li>
         <li>Framework-related topics</li>
         <li>Professional development</li>
+        <li>...</li>
     </ul>
 </div>
 {% endblock %}
