--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -150,6 +150,8 @@ div:empty {
   .opencfp-login,
   .opencfp-signup {
     @apply .text-white;
-    @apply .w-1/6;
+    @apply .w-1/3;
+    @apply .bg-white;
+    @apply .p-8 rounded-sm;
   }
 }
