--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -1,8 +1,9 @@
 {% extends "layouts/default.twig" %}
 
 {% block header %}
-    <header id="hero" class="bg-cover p-24" style="background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url({{ site.venue_image_path }}) no-repeat center -300px / cover fixed;">
-        <div class="container mx-auto flex">
+    <header id="hero" class="bg-cover p-24"
+            style="background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url({{ site.venue_image_path }}) no-repeat center -300px / cover fixed;">
+        <div class="container mx-auto flex justify-between items-baseline">
             <div class="p-8 bg-brand text-white rounded-sm shadow">
                 {% if cfp_open %}
                     <h1 class="text-white">Call For Papers Now Open!</h1>
@@ -18,24 +19,39 @@
                     <p>Submissions were accepted until {{ site.enddate }}</p>
                 {% endif %}
 
-                <div class="mt-8">
+                <div class="mt-8 flex justify-between">
                     {% if cfp_open %}<a href="{{ url('user_new') }}" class="btn btn-white-o">Register Now</a>{% endif %}
+                    <a href="{{ site.eventurl }}" target="_blank" class="btn btn-white-o">Visit conference site</a>
                 </div>
             </div>
-
         </div>
     </header>
 
-    <div class="container mx-auto">
-        <div class="flex justify-between items-center px-4 py-6">
-            {% if site.event_location is defined and site.date_format is defined %}
-                <p>{{ site.title }} is from <span class="text-bold">{{ site.arrival|date(site.date_format, false) }}</span> to <span class="text-bold">{{ site.departure|date(site.date_format, false) }}</span> in {{ site.event_location }}</p>
-            {%  else %}
-                <p>For More Information About The Conference</p>
-            {% endif %}
-            <a href="{{ site.eventurl }}" class="btn btn-brand-o">Visit Conference Site</a>
-        </div>
+    <div class="container mx-auto px-4 py-4">
+        {% if site.event_location is defined and site.date_format is defined %}
+            <h2>{{ site.title }} are from <span
+                        class="text-bold">{{ site.arrival|date(site.date_format, false) }}</span>
+                to <span class="text-bold">{{ site.departure|date(site.date_format, false) }}</span>
+                in {{ site.event_location }}
+            </h2>
+        {% else %}
+            <p>For More Information About The Conference</p>
+        {% endif %}
+        <h4>
+            <i class="fa fa-twitter text-twitter"></i>
+            Follow
+            <a href="https://twitter.com/PHPDD" target="_blank" title="PHP Developer Days 2018 at Twitter">
+                <span class="text-twitter">@PHPDD</span>
+            </a> or
+            <a href="https://twitter.com/hashtag/PHPDD18" target="_blank" title="Hashtag PHPDD18 at Twitter">
+                <span class="text-twitter">#PHPDD18</span>
+            </a>
+            for recent updates.
+        </h4>
     </div>
+
+    <hr>
+
 {% endblock %}
 {% block content %}
     {% include "_marketing.twig" %}
