--- a/resources/views/layouts/default.twig
+++ b/resources/views/layouts/default.twig
@@ -1,56 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>{% block title %}{{ site.title }}{% endblock %}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="{{ assets('css/app.css') }}" rel="stylesheet" media="screen">
-    </head>
-    <body class="border-t-4 border-brand">
-        <nav class="{% if not active('homepage') %}border-b border-white{% endif %}">
-            <div class="container mx-auto flex justify-between">
-                <a class="font-serif flex items-center" href="{{ url('homepage') }}">
-                    <img class="w-2/3 mt-4 mb-4" src="{{ assets('img/PHPDD18-Logo.svg') }}" alt="PHP Developer Days 2018">
-                    <h1 class="sr-only">PHP Developer Days 2018</h1>
-                </a>
-                <div class="flex">
-                    <a href="{{ url('homepage') }}" class="mr-8 py-6 {% if active('homepage') %}border-b-4 border-brand{% else %}text-soft{% endif %}">Home</a>
-                    <a href="{{ url('speaker_package') }}" class="mr-8 py-6 {% if active('speaker_package') %}border-b-4 border-brand{% else %}text-soft{% endif %}">Speaker Package</a>
-                    <a href="{{ url('talk_ideas') }}" class="mr-8 py-6 {% if active('talk_ideas') %}border-b-4 border-brand{% else %}text-soft{% endif %}">Talk Ideas</a>
-                    {% if user is defined and user is not empty %}
-                        <a href="{{ url('dashboard') }}" class="mr-8 py-6 {% if active('dashboard') %}border-b-4 border-brand{% else %}text-soft{% endif %}">Dashboard</a>
-                        {% if user_is_admin %}
-                            <a href="{{ url('admin') }}" class="mr-8 py-6 {% if active('admin') %}border-b-4 border-brand{% else %}text-soft{% endif %}">Admin</a>
-                        {% endif %}
-                        {% if user_is_reviewer is defined and user_is_reviewer %}
-                            <a href="{{ url('reviewer') }}" class="mr-8 py-6 {% if active('reviewer') %}border-b-4 border-brand{% else %}text-soft{% endif %}">Reviewer</a>
-                        {% endif %}
-                        <a href="{{ url('logout') }}" class="py-6 text-soft">Logout</a>
-                    {% else %}
-                        <a href="{{ url('login') }}" class="mr-8 py-6 text-soft hover:text-dark">Login</a>
-                        <a href="{{ url('user_new') }}" class="py-6 text-soft @text-dark">Signup</a>
-                    {% endif %}
-                </div>
-            </div>
-        </nav>
+<head>
+    <title>{% block title %}{{ site.title }}{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{{ assets('css/app.css') }}" rel="stylesheet" media="screen">
+</head>
+<body class="border-t-4 border-brand">
+<nav class="{% if not active('homepage') %}border-b border-white{% endif %}">
+    <div class="container mx-auto flex justify-between">
+        <a class="font-serif flex items-center" href="{{ url('homepage') }}">
+            <img class="w-1/3 px-4 py-2" src="{{ assets('img/phpugdd-logo.svg') }}" alt="PHP USERGROUP DRESDEN e.V.">
+            <img class="w-2/3 px-4 py-2" src="{{ assets('img/PHPDD18-Logo.svg') }}" alt="PHP Developer Days 2018">
+            <h1 class="sr-only">PHP Developer Days 2018</h1>
+        </a>
+        <div class="flex">
+            <a href="{{ url('homepage') }}"
+               class="uppercase mr-4 py-6 {% if active('homepage') %}text-default{% else %}text-soft{% endif %}">Home</a>
+            <a href="{{ url('speaker_package') }}"
+               class="uppercase mr-4 py-6 {% if active('speaker_package') %}text-default{% else %}text-soft{% endif %}">Packages</a>
+            <a href="{{ url('talk_ideas') }}"
+               class="uppercase mr-4 py-6 {% if active('talk_ideas') %}text-default{% else %}text-soft{% endif %}">Ideas</a>
+            {% if user is defined and user is not empty %}
+                <a href="{{ url('dashboard') }}"
+                   class="uppercase mr-4 py-6 {% if active('dashboard') %}text-default{% else %}text-soft{% endif %}">Dashboard</a>
+                {% if user_is_admin %}
+                    <a href="{{ url('admin') }}"
+                       class="uppercase mr-4 py-6 {% if active('admin') %}text-default{% else %}text-soft{% endif %}">Admin</a>
+                {% endif %}
+                {% if user_is_reviewer is defined and user_is_reviewer %}
+                    <a href="{{ url('reviewer') }}"
+                       class="uppercase mr-4 py-6 {% if active('reviewer') %}text-default{% else %}text-soft{% endif %}">Reviewer</a>
+                {% endif %}
+                <a href="{{ url('logout') }}" class="uppercase py-6 text-soft">Logout</a>
+            {% else %}
+                <a href="{{ url('login') }}" class="uppercase mr-4 py-6 text-soft hover:text-dark">Login</a>
+                <a href="{{ url('user_new') }}" class="uppercase py-6 text-soft @text-dark">Signup</a>
+            {% endif %}
+        </div>
+    </div>
+</nav>
 
-        {% block header %}
-        {% endblock %}
+{% block header %}
+{% endblock %}
 
-        <main class="container mx-auto mt-8 flex">
-            <div class="flex-1 mr-16">{% block sidebar %}{% endblock %}</div>
-            <div class="flex-3 w-full">
-                {% include "_flash.twig" %}
-                {% block content %}{% endblock %}
-            </div>
-        </main>
+<main class="container mx-auto mt-8 flex">
+    <div class="flex-1 mr-16">{% block sidebar %}{% endblock %}</div>
+    <div class="flex-3 w-full">
+        {% include "_flash.twig" %}
+        {% block content %}{% endblock %}
+    </div>
+</main>
 
-        {% block scripts %}
-            <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-                    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-                    crossorigin="anonymous"></script>
-        {% endblock %}
+{% block scripts %}
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
+{% endblock %}
 
-        {% if site.show_contrib_banner %}
-        {% endif %}
-    </body>
+<hr class="mt-8">
+
+<footer class="container mx-auto flex justify-between items-center">
+    <div class="text-sm text-soft">
+        Braught to you by
+        <a href="http://phpug-dresden.org" target="_blank">
+            <span class="text-phpugdd">PHP USERGROUP DRESDEN e.V.</span>
+        </a>
+    </div>
+    <div class="text-sm text-soft">
+        <i class="fa fa-twitter text-twitter"></i>
+        <a href="https://twitter.com/PHPDD" target="_blank" title="PHP Developer Days 2018 at Twitter">
+            <span class="text-twitter">@PHPDD</span>
+        </a>
+    </div>
+    <div class="text-sm text-soft">
+        <i class="fa fa-twitter text-twitter"></i>
+        <a href="https://twitter.com/hashtag/PHPDD18" target="_blank" title="Hashtag PHPDD18 at Twitter">
+            <span class="text-twitter">#PHPDD18</span>
+        </a>
+    </div>
+    <div class="text-sm text-soft">
+        Questions? Reach out to us:
+        <a href="mailto:orga@phpug-dresden.org?subject=CFP%20PHPDD18" target="_blank">
+            <span class="text-phpugdd">orga[at]phpug-dresden.org</span>
+        </a>
+    </div>
+</footer>
+
+</body>
 </html>
