--- a/resources/views/dashboard.twig
+++ b/resources/views/dashboard.twig
@@ -40,7 +40,7 @@ function deleteTalk(tid) {
                 {% endif %}
             </div>
             <div>
-                <h2 class="m-0">{{ profile.name }}</h2>
+                <h2 class="m-0 text-white">{{ profile.name }}</h2>
                 {% if profile.company %}
                     <p>{{ profile.company }}</p>
                 {% endif %}
@@ -68,7 +68,8 @@ function deleteTalk(tid) {
                         <p class="text-sm text-dark-soft mb-3">{{ talk.description | truncate(200) }}</p>
                         <div>
                             <span class="bg-brand text-white text-xs rounded-full py-2 px-3 mr-2"><i class="fa fa-clock-o"></i> {{ talkHelper.getTypeDisplayName(talk.type) }}</span>
-                            <span class="bg-brand text-white text-xs rounded-full py-2 px-3"><i class="fa fa-graduation-cap"></i> {{ talkHelper.getCategoryDisplayName(talk.category) }}</span>
+                            <span class="bg-brand text-white text-xs rounded-full py-2 px-3 mr-2"><i class="fa fa-graduation-cap"></i> {{ talkHelper.getCategoryDisplayName(talk.category) }}</span>
+                            <span class="bg-brand text-white text-xs rounded-full py-2 px-3">{{ talkHelper.getLevelDisplayName(talk.level) }}</span>
                         </div>
                     </div>
                     <div>
@@ -85,7 +86,7 @@ function deleteTalk(tid) {
             <div class="text-center">
                 <i class="fa fa-commenting-o text-soft fa-5x"></i>
                 <h1 class="font-serif font-thin text-5xl m-0">Get Started!</h1>
-                <p class="mb-8">Submit as many talks as you like for consideration ...</p>
+                <p class="mb-8">Submit as many talks or workshops as you like for consideration ...</p>
                 <a href="{{ url('talk_new') }}" class="btn btn-brand">Submit a Talk</a>
             </div>
         {% endif %}
