--- a/resources/views/layouts/default.twig
+++ b/resources/views/layouts/default.twig
@@ -18,7 +18,7 @@
   "@context" : "http://schema.org",
   "@type": "Person",
   "name": "PHP Developer Days 2018",
-  "image": "/assets/img/socialcard.png",
+  "image": "https://cfp.phpdd.org/assets/img/socialcard.png",
   "url": "https://cfp.phpdd.org",
   "sameAs" : [
       "https://twitter.com/PHPDD",
@@ -63,7 +63,7 @@
     <meta name="twitter:title" content="{{ site.title }} | PHP Developer Days 2018"/>
     <meta name="twitter:description" content="PHP Developer Days 2018 by PHP USERGROUP DRESDEN e.V."/>
     <meta name="twitter:url" content="{{ url('homepage') }}"/>
-    <meta name="twitter:image:src" content="/assets/img/socialcard.png"/>
+    <meta name="twitter:image:src" content="https://cfp.phpdd.org/assets/img/uni-logo.png"/>
 
     <meta name="generator" content="OpenCFP"/>
 
