--- a/resources/views/layouts/default.twig
+++ b/resources/views/layouts/default.twig
@@ -48,10 +48,10 @@
 
     <meta name="referrer" content="origin"/>
 
-    <meta property="og:site_name" content="PHP Developer Days 2018"/>
+    <meta property="og:site_name" content="{{ site.title }}"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="{{ site.title }} | PHP Developer Days 2018"/>
-    <meta property="og:description" content="PHP Developer Days 2018 by PHP USERGROUP DRESDEN e.V."/>
+    <meta property="og:title" content="{{ site.title }}"/>
+    <meta property="og:description" content="The 4th annual PHP community event in Dresden, Germany by PHP USERGROUP DRESDEN e.V."/>
     <meta property="og:url" content="https://cfp.phpdd.org"/>
     <meta property="og:image" content="/assets/img/socialcard.png"/>
     <meta property="article:published_time" content="{{ 'now'|date('c') }}"/>
@@ -60,8 +60,8 @@
         <meta property="article:tag" content="{{ tag }}"/>
 	{% endfor %}
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="{{ site.title }} | PHP Developer Days 2018"/>
-    <meta name="twitter:description" content="PHP Developer Days 2018 by PHP USERGROUP DRESDEN e.V."/>
+    <meta name="twitter:title" content="{{ site.title }}"/>
+    <meta name="twitter:description" content="The 4th annual PHP community event in Dresden, Germany by PHP USERGROUP DRESDEN e.V."/>
     <meta name="twitter:url" content="{{ url('homepage') }}"/>
     <meta name="twitter:image:src" content="https://cfp.phpdd.org/assets/img/socialcard.png"/>
 
